// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar it should render large 1`] = `
<nav
  className="navbar navbar-expand-sm navbar-light fixed-top p-3"
>
  <a
    aria-current="page"
    className="navbar-brand"
    href="/"
    onClick={[Function]}
  >
    <img
      alt="NEXT by Pacific Life"
      className="d-inline-block align-middle"
      src="NXT_Logo_light.svg"
    />
  </a>
  <div
    className="navbar-collapse collapse"
  >
    <div
      className="mx-auto"
    />
    <a
      aria-current="page"
      className="active nav-link"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <div
      onClick={[Function]}
    >
      <div
        className="dropdown"
      >
        Products 
        <span>
           
        </span>
        <img
          alt="Arrow"
          className="d-block-inline"
          src="arrowdown.svg"
          width={20}
        />
        <div
          className="dropdown-content"
        >
          <a
            className="nav-link"
            href="/nextdeferredincomeannuity"
            onClick={[Function]}
          >
            Next Deferred Income Annuity
          </a>
          <a
            className="nav-link"
            href="/lid"
            onClick={[Function]}
          >
            Next Term Life
          </a>
        </div>
      </div>
    </div>
    <a
      className="nav-link"
      href="/about"
      onClick={[Function]}
    >
      About
    </a>
    <a
      className="nav-link"
      href="/faq"
      onClick={[Function]}
    >
      FAQ
    </a>
    <a
      className="nav-link"
      href="/contact"
      onClick={[Function]}
    >
      Contact
    </a>
  </div>
</nav>
`;

exports[`NavBar it should render small 1`] = `
<div
  width="400px"
>
  <nav
    className="navbar navbar-expand-sm navbar-light fixed-top p-3"
  >
    <a
      aria-current="page"
      className="navbar-brand"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="NEXT by Pacific Life"
        className="d-inline-block align-middle"
        src="NXT_Logo_light.svg"
      />
    </a>
    <div
      className="navbar-collapse collapse"
    >
      <div
        className="mx-auto"
      />
      <a
        aria-current="page"
        className="active nav-link"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <div
        onClick={[Function]}
      >
        <div
          className="dropdown"
        >
          Products 
          <span>
             
          </span>
          <img
            alt="Arrow"
            className="d-block-inline"
            src="arrowdown.svg"
            width={20}
          />
          <div
            className="dropdown-content"
          >
            <a
              className="nav-link"
              href="/nextdeferredincomeannuity"
              onClick={[Function]}
            >
              Next Deferred Income Annuity
            </a>
            <a
              className="nav-link"
              href="/lid"
              onClick={[Function]}
            >
              Next Term Life
            </a>
          </div>
        </div>
      </div>
      <a
        className="nav-link"
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
      <a
        className="nav-link"
        href="/faq"
        onClick={[Function]}
      >
        FAQ
      </a>
      <a
        className="nav-link"
        href="/contact"
        onClick={[Function]}
      >
        Contact
      </a>
    </div>
  </nav>
</div>
`;
